feat: CurationResponse 관련 반환값 추가 - curation의 수정시간이 반환되도록 추가 - PageInfo도 함께 반환하도록 추가